# linguacast

./: .gitignore  Cargo.toml  LICENSE  LICENSES.md  MODELS.md  README.md
.github/workflows/: ci.yml
crates/linguacast/: Cargo.toml
crates/linguacast/data/: refusal-list.json
crates/linguacast/src/: cli.rs  consent.rs  device.rs  ffmpeg.rs  main.rs  pack.rs  pipeline.rs  progress.rs  sidecar.rs
docs/: consent-gate.md  engine-decision.md  ttw-optimization.md  watermark-survival.csv  watermark.md
samples/week1/: README.md  demo-run.cast  regenerate.sh
scripts/: check_model_licenses.py  mock_sidecar.py  poll_ioreg.sh  simulate_watermarked_mp4.py  watermark_survival.py
sidecar/: README.md  bench_tts.py  main.py  requirements.txt  test_watermark.py  watermark.py
