[workspace]
resolver = "2"
members = ["crates/linguacast"]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"
repository = "https://github.com/openpipe-ai/linguacast"
homepage = "https://github.com/openpipe-ai/linguacast"
authors = ["LinguaCast contributors"]

[workspace.dependencies]
# Keep this list tight. Every dep audited for Apache-2.0 / MIT.
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8"
tempfile = "3"
directories = "6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
