[package]
name = "linguacast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Dub any video into any language in the speaker's own voice — local-first CLI."

[[bin]]
name = "linguacast"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
directories = { workspace = true }
